# Quill

./: CMakeLists.txt  README.md  current_state.json  main.cpp  quill_claude_context.json
.github/workflows/: ci.yml
docs/: OVERVIEW.md  dokumentacja.tex
src/: crypto.h  network.h
src/crypto/: AesGcm.cpp  AesGcm.h  Argon2.cpp  Argon2.h  CryptoManager.cpp  CryptoManager.h  DilithiumSign.cpp  DilithiumSign.h  Hkdf.cpp  Hkdf.h  IdentityManager.cpp  IdentityManager.h  KryberKEM.cpp  KryberKEM.h  KyberKEM.cpp  KyberKEM.h  ProfileManager.cpp  ProfileManager.h  RoomStore.cpp  RoomStore.h  SecurityLevel.h  TrustStore.cpp  TrustStore.h  crypto.h
src/frontend/: ChatApp.cpp  ChatApp.h  ChatAppRender.cpp  Theme.h
src/network/: NetworkClient.cpp  NetworkClient.h  NetworkServer.cpp  NetworkServer.h  Socket.cpp  Socket.h  network.h
src/protocol/: FileTransfer.cpp  FileTransfer.h  MessageFormat.cpp  MessageFormat.h
tests/: test_aesgcm.cpp  test_argon2.cpp  test_cryptomanager.cpp  test_dilithium.cpp  test_filetransfer.cpp  test_hkdf.cpp  test_identity.cpp  test_kyber.cpp  test_messageformat.cpp  test_profile.cpp  test_roomstore.cpp  test_truststore.cpp  test_util.h
